@@ -2,17 +2,35 @@ package org.satya.whatsapp.utils;
 
 import lombok.experimental.UtilityClass;
 
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.UncheckedIOException;
-import java.net.URL;
+import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 @UtilityClass
 public class MediaUtils {
-    public byte[] readBytes(String url) {
+    public byte[] readBytes(String urlString) {
         try {
-            return new URL(url).openStream().readAllBytes();
-        } catch (IOException exception) {
-            throw new UncheckedIOException("Cannot download media", exception);
+            URI uri = new URI(urlString);
+            HttpURLConnection connection = (HttpURLConnection) uri.toURL().openConnection();
+
+            try (InputStream inputStream = connection.getInputStream();
+                 ByteArrayOutputStream outputStream = new ByteArrayOutputStream()) {
+
+                byte[] buffer = new byte[4096];
+                int bytesRead;
+                while ((bytesRead = inputStream.read(buffer)) != -1) {
+                    outputStream.write(buffer, 0, bytesRead);
+                }
+
+                return outputStream.toByteArray();
+            }
+        } catch (URISyntaxException | IOException e) {
+            assert e instanceof IOException;
+            throw new UncheckedIOException("Error reading bytes from URL: " + urlString, (IOException) e);
         }
     }
 }
